--- a/src/Navbar/Side.css
+++ b/src/Navbar/Side.css
@@ -18,7 +18,7 @@ span{
     padding-top: 60px;
 }
 
-.sidenav a {
+.sidenav div {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
@@ -27,7 +27,7 @@ span{
     transition: 0.3s;
 }
 
-.sidenav a:hover {
+.sidenav div:hover {
     color: #f1f1f1;
 }
 
@@ -44,7 +44,7 @@ span{
         padding-top: 15px;
     }
 
-    .sidenav a {
+    .sidenav div {
         font-size: 18px;
     }
 }
